// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlayerHuman vs PlayerHuman > Basic test 1`] = `
[
  [
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
  ],
]
`;

exports[`PlayerHuman vs PlayerHuman > Basic test 2`] = `
[
  [
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    "🔴",
    " ",
    " ",
    " ",
  ],
]
`;

exports[`PlayerHuman vs PlayerHuman > Basic test 3`] = `
[
  [
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    "🔵",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    "🔴",
    " ",
    " ",
    " ",
  ],
]
`;

exports[`PlayerHuman vs PlayerHuman > Cannot move on a filled column 1`] = `
[
  [
    " ",
    " ",
    " ",
    "🔵",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    "🔴",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    "🔵",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    "🔴",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    "🔵",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    "🔴",
    " ",
    " ",
    " ",
  ],
]
`;

exports[`PlayerHuman vs PlayerHuman > Cannot move on a filled column 2`] = `
[
  [
    " ",
    " ",
    " ",
    "🔵",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    "🔴",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    "🔵",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    "🔴",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    "🔵",
    " ",
    " ",
    " ",
  ],
  [
    " ",
    " ",
    " ",
    "🔴",
    " ",
    " ",
    " ",
  ],
]
`;
